form area created

--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
           </a>
           <a href="">
             <i class="fa-brands fa-linkedin fa-xl" style="color: #9d9db8"></i>
-            Linkein
+            Linkedin
           </a>
         </section>
-        <form action="">
-            <p>Send Message</p>
-            <input type="text" name="username" id="name" placeholder="User Name">
-            <input type="email" name="email" id="mail" placeholder="E-Mail">
-            <textarea name="message" id="msg" cols="30" rows="10" placeholder="Your Message"></textarea>
-            <input type="submit" value="">
+        <form action="#">
+            <p class="white">Send Message</p>
+            <input type="text" name="username" id="name" class="block" placeholder="User Name">
+            <input type="email" name="email" id="mail" class="block" placeholder="E-Mail">
+            <textarea name="message" id="msg"  class="block txt" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" class="block" value="SEND">
         </form>
       </section>
       <footer>
